# theseus

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  pytest.ini  roadmap.md
configs/: ablation_matrix_rtx2060super.json  accelerator_parity_claim_approval.template.json  architecture_search_space.json  arm_lifecycle_policy.json  arm_sucker_policy.json  artifact_admission_policy.json  artifact_retention_budget_policy.json  assistant_trace_schema.json  attd_policy.json  autonomy_policy.json  autoresearch_loop_policy.json  belief_update_policy.json  benchmark_adapter_factory.json  benchmaxx_curriculum.json  candidate_bottleneck_policy.json  capability_market_baselines.json  cell_lifecycle_policy.json  checkpoint_backup_policy.json  checkpoint_retention_pins.json  code_residual_forge_policy.json  cognitive_context_policy.json  compute_market_policy.json  control_plane_ownership.json  correctness_in_loop_generator_experiments.json  deterministic_tool_substrate.json  dogfood_trace.local.example.json  external_benchmarks.toml  full_state_update_causality.json  generation_architecture_contracts.json  (+105 more)
crates/symliquid-bench/: Cargo.toml
crates/symliquid-bench/src/: main.rs
crates/symliquid-cli/: Cargo.toml
crates/symliquid-cli/src/: code_ranker.rs  code_token_generator.rs  main.rs  sts_parallel_decoder.rs
crates/symliquid-cli/src/code_lm_closure/: broad_transfer_residual_policy.rs  candidate_fanout.rs  candidate_hygiene.rs  contract_verifier.rs  decoder_completion.rs  fanout_timing.rs  mod.rs  part_00.rs  part_00_contract.rs  part_01.rs  part_02.rs  part_02_beam_decode.rs  part_02_body_models.rs  part_03.rs  part_04.rs  reporting.rs  state_sequence_features.rs  task_features_io.rs  work_budget.rs
crates/symliquid-cli/src/code_lm_closure/broad_transfer_residual_policy/: receiver_body_inventory.rs  retry_bodies.rs  tests.rs  type_contract_bodies.rs
crates/symliquid-cli/src/code_lm_closure/candidate_fanout/: broad_private_generalization.rs  broad_private_train_prototype.rs  contract_token.rs  expression_pool.rs  prefilter.rs  private_residual_v3.rs  scheduler.rs  sts_bridge.rs  syntax_repair.rs  task_rows.rs  variant_cache.rs
crates/symliquid-cli/src/code_lm_closure/contract_verifier/: category_taxonomy.rs  quality_gate.rs  scoring.rs  semantic_admissibility.rs
crates/symliquid-cli/src/code_lm_closure/decoder_completion/: parser_repair.rs
crates/symliquid-cli/src/code_lm_closure/task_features_io/: artifact_io.rs  visible_signature.rs
crates/symliquid-cli/src/code_token_generator/: analysis.rs  candidates.rs  training.rs
crates/symliquid-core/: Cargo.toml
crates/symliquid-core/src/: ablations.rs  backend.rs  benchmarks.rs  cgs.rs  config.rs  error.rs  eval.rs  lib.rs  loop_closure.rs  tensor.rs  token_superposition.rs  train.rs
crates/symliquid-core/src/benchmarks/: linguistic_features.rs  tests.rs
crates/symliquid-core/src/benchmarks/linguistic_features/: lexicon.rs
crates/symliquid-core/src/modules/: fep.rs  kan_lite.rs  liquid.rs  mod.rs  model.rs  reservoir.rs  vsa.rs
crates/symliquid-core/src/tasks/: active_classification.rs  active_gridworld.rs  delayed_recall.rs  mod.rs  role_filler.rs
crates/symliquid-core/tests/: test_backend.rs  test_cgs.rs  test_fep.rs  test_gridworld.rs  test_kan.rs  test_liquid.rs  test_loop_closure.rs  test_model.rs  test_reservoir.rs  test_vsa.rs
crates/symliquid-cuda/: Cargo.toml  build.rs
crates/symliquid-cuda/kernels/: cleanup_kernels.cu  fep_kernels.cu  kan_kernels.cu  liquid_kernels.cu  readout_kernels.cu  reservoir_kernels.cu  rollout_kernels.cu  vsa_kernels.cu
crates/symliquid-cuda/src/: device.rs  fep_cuda.rs  kan_cuda.rs  kernels.rs  lib.rs  liquid_cuda.rs  readout_cuda.rs  reservoir_cuda.rs  rollout_cuda.rs  vsa_cuda.rs
crates/symliquid-cuda/src/rollout_cuda/: feature_support.rs
crates/symliquid-cuda/tests/: cuda_cpu_parity.rs
crates/symliquid-ffi/: Cargo.toml
crates/symliquid-ffi/src/: lib.rs  rollout.rs
crates/symliquid-metal/: Cargo.toml  build.rs
crates/symliquid-metal/kernels/: rollout_state_update.metal
crates/symliquid-metal/src/: lib.rs  macos.rs
crates/symliquid-metal/tests/: rollout_metal_parity.rs
docs/: CGS.md  (+49 more)
(+1110 files in other folders)
