[package]
name = "theseus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust-first reference prototype for Project Theseus."

[workspace]
members = [
    ".",
    "crates/symliquid-core",
    "crates/symliquid-cuda",
    "crates/symliquid-metal",
    "crates/symliquid-ffi",
    "crates/symliquid-cli",
    "crates/symliquid-bench",
    "crates/theseus-supervisor",
]
default-members = [
    ".",
    "crates/symliquid-core",
    "crates/symliquid-cuda",
    "crates/symliquid-metal",
    "crates/symliquid-ffi",
    "crates/symliquid-cli",
    "crates/symliquid-bench",
    "crates/theseus-supervisor",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
symliquid-core = { path = "crates/symliquid-core" }
symliquid-cuda = { path = "crates/symliquid-cuda" }
symliquid-metal = { path = "crates/symliquid-metal" }
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dependencies]
symliquid-core = { workspace = true }
symliquid-cuda = { workspace = true, optional = true }

[features]
default = []
cuda = ["dep:symliquid-cuda", "symliquid-cuda/cuda"]
