[package]
name = "symliquid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line runner for SymLiquid FEP-Net toy tasks."

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symliquid-core = { workspace = true }
symliquid-cuda = { workspace = true, optional = true }
symliquid-metal = { workspace = true }

[features]
default = []
cuda = ["dep:symliquid-cuda", "symliquid-cuda/cuda"]
