[package]
name = "symliquid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CPU reference backend and model logic for SymLiquid FEP-Net."

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
