[package]
name = "symliquid-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI policy scorer for SymLiquid Puffer/Ocean adapters."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
